# rtu-scraper

./: Cargo.toml  README.md
src/: main.rs
