[package]
name = "rtu-scraper"
version = "0.1.0"
authors = ["Rudolfs Agris Stilve <rudolfsagris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.11.0"
reqwest = {version="0.10.1"}
tokio = {version="0.2.11", features=["full"]}
chrono = "0.4.10"
stringplus = "0.1.0"
chrono-tz = "0.5.1"